[gd_scene load_steps=18 format=2]

[ext_resource path="res://main/game/game.gd" type="Script" id=1]
[ext_resource path="res://main/game/hud.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/main-font-48.tres" type="DynamicFont" id=3]
[ext_resource path="res://entities/player/player.tscn" type="PackedScene" id=4]
[ext_resource path="res://main/game/lasers.gd" type="Script" id=5]
[ext_resource path="res://main/game/turrets.gd" type="Script" id=6]
[ext_resource path="res://main/game/score_manager.gd" type="Script" id=7]
[ext_resource path="res://main/game/progression_manager.gd" type="Script" id=8]
[ext_resource path="res://assets/audio/Music_Light-Puzzles.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/audio/score_up.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("root:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "game_over"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("root:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "game_started"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("root:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 640, 128, 0, 0, 0, 0, 832, 160, 0, 0, 0, 0, 976, 224, 0, 0, 0, 0, 1072, 336, 0, 0, 0, 0, 1088, 496, 0, 0, 0, 0, 1056, 624, 0, 0, 0, 0, 976, 720, 0, 0, 0, 0, 848, 800, 0, 0, 0, 0, 640, 848, 0, 0, 0, 0, 432, 800, 0, 0, 0, 0, 288, 720, 0, 0, 0, 0, 224, 608, 0, 0, 0, 0, 176, 464, 0, 0, 0, 0, 224, 336, 0, 0, 0, 0, 304, 224, 0, 0, 0, 0, 448, 144, 0, 0, 0, 0, 640, 128 )
}

[sub_resource type="Animation" id=5]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Music:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade_out_volume"
tracks/0/type = "value"
tracks/0/path = NodePath("Music:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="Environment" id=7]
background_mode = 4
glow_enabled = true
glow_intensity = 4.0
glow_bloom = 0.03
glow_blend_mode = 0
glow_hdr_threshold = 0.6
glow_bicubic_upscale = true

[node name="Game" type="Node2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="ScoreManager" type="Node" parent="."]
script = ExtResource( 7 )

[node name="ProgressionManager" type="Node" parent="."]
script = ExtResource( 8 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 2 )

[node name="root" type="Control" parent="HUD"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="HUD/root"]
anchor_right = 1.0
margin_top = 10.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 3 )
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD"]
autoplay = "default"
anims/default = SubResource( 1 )
anims/game_over = SubResource( 2 )
anims/game_started = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -157.0
margin_top = -144.0
margin_right = 1586.0
margin_bottom = 1103.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Lasers" type="Node2D" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Turrets" type="Node2D" parent="."]
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
target_path = NodePath("../Player")

[node name="Terrain" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Mirror" type="StaticBody2D" parent="Terrain" groups=[
"mirror",
]]
position = Vector2( 640, 480 )
collision_layer = 2
collision_mask = 12
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon1" type="CollisionPolygon2D" parent="Terrain/Mirror"]
scale = Vector2( 600, 480 )
polygon = PoolVector2Array( 1, 0, 1.28, 0, 1.28, -0.384, 1.28, -1.28, 0, -1.28, -1.28, -1.28, -1.28, -0.272, -1.28, 0, -1, 0, -0.924, -0.383, -0.707, -0.707, -0.383, -0.924, 0, -1, 0.383, -0.924, 0.707, -0.707, 0.924, -0.383 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2" type="CollisionPolygon2D" parent="Terrain/Mirror"]
scale = Vector2( 600, 480 )
polygon = PoolVector2Array( 1, 0, 0.924, 0.383, 0.707, 0.707, 0.383, 0.924, 0, 1, -0.383, 0.924, -0.707, 0.707, -0.924, 0.383, -1, 0, -1.28, 0.00799999, -1.28, 0.456, -1.28, 1.336, 0, 1.336, 1.28, 1.352, 1.28, 0.456, 1.28, 0.00799999 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon1" type="Polygon2D" parent="Terrain/Mirror"]
modulate = Color( 0.231373, 0.231373, 0.231373, 1 )
scale = Vector2( 600, 480 )
color = Color( 0.760784, 0.764706, 0.780392, 1 )
polygon = PoolVector2Array( 1, 0, 1.30667, 0, 1.30667, -0.366667, 1.30667, -1.3, 0, -1.3, -1.28, -1.3, -1.28, -0.333333, -1.28, 0, -1, 0, -0.924, -0.383, -0.707, -0.707, -0.383, -0.924, 0, -1, 0.383, -0.924, 0.707, -0.707, 0.924, -0.383 )
__meta__ = {
"_edit_lock_": true
}

[node name="Polygon2" type="Polygon2D" parent="Terrain/Mirror"]
modulate = Color( 0.231373, 0.231373, 0.231373, 1 )
scale = Vector2( 600, 480 )
color = Color( 0.760784, 0.764706, 0.780392, 1 )
polygon = PoolVector2Array( 1, 0, 0.924, 0.383, 0.707, 0.707, 0.383, 0.924, 0, 1, -0.383, 0.924, -0.707, 0.707, -0.924, 0.383, -1, 0, -1.30667, -5.96046e-08, -1.30667, 0.608, -1.30667, 1.248, 0, 1.248, 1.30667, 1.248, 1.30667, 0.576, 1.30667, -5.96046e-08 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 744.847, 429.626 )

[node name="TurretSpawnArea" type="Path2D" parent="."]
curve = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="follow" type="PathFollow2D" parent="TurretSpawnArea"]
position = Vector2( 640, 128 )
rotation = 0.165147

[node name="TurretSpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Audio" type="Node" parent="."]

[node name="score_up" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 10 )
volume_db = -12.0
bus = "Sound"

[node name="Music" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 9 )
volume_db = -3.0
bus = "Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Audio"]
autoplay = "default"
anims/default = SubResource( 5 )
anims/fade_out_volume = SubResource( 6 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 7 )
[connection signal="game_over" from="." to="Turrets" method="turn_off_turrets"]
[connection signal="game_over" from="." to="ScoreManager" method="game_over"]
[connection signal="game_over" from="." to="Audio/AnimationPlayer" method="play" binds= [ "fade_out_volume" ]]
[connection signal="game_over" from="." to="TurretSpawnTimer" method="stop"]
[connection signal="game_over" from="." to="HUD/AnimationPlayer" method="play" binds= [ "game_over" ]]
[connection signal="game_started" from="." to="Audio/Music" method="play"]
[connection signal="game_started" from="." to="HUD/AnimationPlayer" method="play" binds= [ "game_started" ]]
[connection signal="update_time" from="." to="HUD" method="_on_Game_update_time"]
[connection signal="update_score" from="ScoreManager" to="Audio/score_up" method="play"]
[connection signal="update_score" from="ScoreManager" to="HUD" method="_on_ScoreManager_update_score"]
[connection signal="spawn_laser" from="Turrets" to="Lasers" method="spawn_copy"]
[connection signal="turret_destroyed" from="Turrets" to="ScoreManager" method="_on_Turrets_turret_destroyed"]
[connection signal="die" from="Player" to="." method="player_died"]
[connection signal="timeout" from="TurretSpawnTimer" to="Turrets" method="spawn_turret"]
